apps/nextcloud-apache/production/resources/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "16G"
    domain: test.jz-c.org
spec:
  rules:
  - host: test.jz-c.org
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 80
